<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DBaile</string>

    <!-- Nombre de las actividades -->
    <string name="title_activity_evento">Evento</string>
    <string name="title_activity_buscarevento_activity">Buscar eventos</string>
    <string name="title_activity_listar_eventos_buscados">Eventos Buscados</string>
    <string name="title_activity_configuracion">Opciones</string>
    <string name="title_activity_ver_imagen">Imagen</string>
    <string name="title_activity_ver_favoritos">Eventos favoritos</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="title_activity_add_comment">Añadir comentario</string>
    <string name="title_activity_registrarse">Registrarse</string>

    <!-- Nombre de los menus -->
    <string name="action_add_favotiro">Añadir a favorito</string>
    <string name="facebook_share">Facebook</string>
    <string name="twitter_share">Twitter</string>
    <string name="google_plus_share">Google+</string>
    <string name="whatsapp_share">Whatsapp</string>
    <string name="action_settings">Opciones</string>
    <string name="action_help">Ayuda</string>
    <string name="action_whois">Acerca de</string>
    <string name="action_ver_favoritos">Ver los favoritos</string>
    <string name="action_siguiente">Siguiente pagina</string>
    <string name="action_anterior">Pagina anterior</string>
    <string name="action_add_comment">Añadir comentario</string>
    <string name="action_logout">Cerrar sesion</string>

    <!-- Textos para opciones -->
    <string name="opcion_filtro_para_portada">Filtrar en portada</string>

    <!-- Textos -->
    <string name="texto_ayuda">Si necesitas ayuda o encuentras algun fallo en la app, puedes contactar con nosotros
    a traves de android.app@dbaile.com</string>

    <!-- Campos -->
    <string name="field_login_info">Inicia sesion</string>
    <string name="field_login_user">Usuario</string>
    <string name="field_login_password">Contraseña</string>
    <string name="field_login_password_confirm">Confirmar contraseña</string>
    <string name="field_login_do_login">Conectar</string>
    <string name="field_login_email">Correo electronico</string>
    <string name="field_login_singin">Registrarse</string>
    <string name="field_login_save_session">Mantener la sesion iniciada</string>
    <string name="field_login_sing_in_and_save_session">Registrarse y mantener la sesion iniciada</string>
    <string name="field_login_sing_in">Registrarse</string>

    <!-- Dialogos -->
    <string name="dialog_eventos_no_encontrados">No se encontraron eventos</string>
    <string name="dialog_comentarios_no_encontrados">No hay comentarios, vuelve atras o crea uno nuevo</string>
    <string name="dialog_eventos_anadido_favoritos">Se ha añadido el evento a favoritos</string>
    <string name="dialog_eventos_eliminado_favoritos">Se ha eliminado el evento de favoritos</string>
    <string name="dialog_seleccionar_disciplina">Selecciona las disciplinas</string>
    <string name="dialog_eventos_favoritos_no_encontrados">No tienes ningun evento a favoritos</string>
    <string name="dialog_cargando_paginas">Cargando pagina... </string>
    <string name="dialog_cargando_eventos">Cargando el evento...</string>
    <string name="dialog_session_iniciada">Se ha iniciado sesion correctamente</string>

    <!-- Varios -->
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="nuevo">Nuevo</string>
    <string name="back">Atras</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">1513825982200241</string>
    <string name="title_activity_login">Inicio de sesion</string>
    <string name="title_activity_ver_comentarios">Comentarios</string>

    <!-- Social -->
    <string name="social_whatsapp_compartir">Mira este evento en dbaile: </string>
    <string name="social_googleplus_compartir">Mira este evento en dbaile: </string>
    <string name="social_facebook_compartir">Mira este evento en dbaile: </string>
    <string name="social_twitter_compartir">Mira este evento en dbaile: </string>


</resources>
