<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always" >
        <menu>
            <item android:id="@+id/facebook_share"
                android:title="@string/facebook_share"
                android:icon="@drawable/facebook_icon"/>
            <!--<item android:id="@+id/twitter_share"
                android:title="@string/twitter_share"
                android:icon="@drawable/twitter_icon"/>-->
            <item android:id="@+id/whatsapp_share"
                android:title="@string/whatsapp_share"
                android:icon="@drawable/whatsapp_icon"/>
            <item android:id="@+id/google_plus_share"
                android:title="@string/google_plus_share"
                android:icon="@drawable/google_plus_icon"/>
        </menu>

    </item>
</menu>