<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.rbcode.dbaile.RegistrarseActivity"
    android:background="#E2F4FB">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/field_login_user"
        android:id="@+id/textLoginUser"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:id="@+id/editUser"
        android:ems="10"
        android:layout_margin="8dp" />

    <!-- Introducir contraseña -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/field_login_password"
        android:id="@+id/textLoginPassword1"
        android:layout_margin="8dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword1"
        android:layout_margin="8dp" />

    <!-- Confirmar contraseña -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/field_login_password_confirm"
        android:id="@+id/textLoginPassword2"
        android:layout_margin="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword2"
        android:layout_margin="8dp" />

    <!-- Correo electronico-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/field_login_email"
        android:id="@+id/textLoginEmail"
        android:layout_margin="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editEmail"
        android:layout_margin="8dp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/field_login_sing_in_and_save_session"
        android:id="@+id/checkBoxMantenerSesion"
        android:layout_margin="8dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/field_login_singin"
        android:id="@+id/field_login_singin"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="doRegisterButton_click"/>
    </LinearLayout>

    </ScrollView>

</RelativeLayout>
