<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.rbcode.dbaile.LoginActivity"
    android:background="#E2F4FB"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/field_login_user"
        android:id="@+id/textLoginUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editUser"
        android:layout_below="@+id/textLoginUser"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/field_login_password"
        android:id="@+id/textLoginPassword"
        android:layout_below="@+id/editUser"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textLoginPassword"
        android:layout_alignRight="@+id/editUser"
        android:layout_alignEnd="@+id/editUser"
        android:layout_margin="8dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_login_save_session"
        android:id="@+id/checkBoxMantenerSesion"
        android:layout_margin="8dp"
        android:layout_below="@+id/editPassword"
        android:layout_alignLeft="@+id/editPassword"
        android:layout_alignStart="@+id/editPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_login_do_login"
        android:id="@+id/field_login_do_login"
        android:layout_below="@+id/checkBoxMantenerSesion"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="doLoginButton_click"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_login_sing_in"
        android:id="@+id/field_login_sing_in"
        android:layout_below="@+id/field_login_do_login"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="doRegisterButton_click"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
